Fix the warnings
Bug: Not applicable
Test: Not applicable
Change-Id: Ia2433020f7919e6742ee897090a0d1abb2be0777

GitOrigin-RevId: 14f0b1ef547f8906b531468b9eab8a15f4e789b3